[fix] (ABC-542): Action icons overflow the picker's limits (#318)
* [fix] (ABC-542):
Fixed action button sizing overflow

* [fix] (ABC-542) Resized action icons to
scale exactly like its standard counterpart

* [fix] (ABC-542) Renamed action icons
css scaling classes

* [test] (ABC-542) added tests for action
icon scaling classes

* [style] (ABC-542): Action icons now
scale exactly like its standard counterpart

* [Test] (ABC-542): modified test
 names to be more descriptive

* [style] (ABC-542): moved
computedIconContainerClass() to private properties

* [fix] (ABC-542): added a height limit for
icons with menu labels

--- a/src/modules/base/iconPicker/iconPicker.css
+++ b/src/modules/base/iconPicker/iconPicker.css
@@ -63,3 +63,22 @@ button:disabled {
 .avonni-builder-icon-picker-small-icon-padding {
     padding: 0.05rem;
 }
+
+.avonni-icon-picker__action-icon_small-scaling {
+    margin: 0 -0.4rem 0 -0.6rem;
+    transform: scale(0.38);
+}
+
+.avonni-icon-picker__action-icon_medium-scaling {
+    margin: 0 -0.4rem 0 -0.6rem;
+    transform: scale(0.55);
+}
+
+.avonni-icon-picker__action-icon_large-scaling {
+    margin: 0 -0.4rem 0 -0.6rem;
+    transform: scale(0.6);
+}
+
+.avonni-icon-picker__toggle-button_size-limit {
+    max-height: 2rem;
+}
